# aws-battlesnack

engine/: Cargo.toml
engine/benches/: benchmark_engine.rs
engine/src/: lib.rs  main.rs
engine/src/engine/: board.rs  bot_a.rs  collision.rs  game.rs  matrice.rs  mcts.rs  mod.rs  player.rs  point.rs  render.rs  snake.rs
engine/src/ui/: bot_a.rs  human.rs  mod.rs  player.rs
server/: .dockerignore  Cargo.toml  Dockerfile  docker-compose.yml
server/src/: main.rs  requests.rs  responses.rs
