[package]
name = "engine"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "engine"
test = false
bench = false

[dependencies]
mcts = "*"
ndarray = "0.15.3"
serde = {version="1.0.126", features=["derive"]}
serde_json = "1.0.64"
ruscii = "0.3.2"
rand = "0.8.4"
itertools = "0.10.1"
piston_window = "0.120.0"
