[package]
authors = ["Alex McRae <alex@alexandermcrae.com>"]
edition = "2018"
license = "MIT"
name = "server"
version = "0.2.0"

[dependencies]
regex = "1.5.4"
rocket = "0.4.10"
rocket_contrib = {version = "0.4.10", default-features = false, features = ["json"]}
serde = {version = "1.0.126", features = ["derive"]}
serde_json = "1.0.64"
