[package]
authors = ["Sami Issaadi <samiisd@hotmail.fr>"]
name = "server"
edition = "2018"
version = "0.1.0"

[dependencies]
regex = "1.5.4"
rocket = "0.4.10"
rocket_contrib = {version = "0.4.10", default-features = false, features = ["json"]}
serde = {version = "1.0.126", features = ["derive"]}
serde_json = "1.0.64"
engine = { path = "../engine" }
